* Fixed: Simple slider captions sitting on top of linked image slides.
* Fixed: "Read More Text" option for post list and post grid builder element and shortcodes.
* Fixed: Allow `themeblvd_grid_class()` to pull proper class for a 1/12 or 1/10 column, when given an integer representing number of equal height columns; previously only allowed integers 1-6.

--------------------------------------------------------------

2.0.0-beta3
-----

* Added WooCommerce support.
* Added Gravity Forms support.
* Added "Sidebar Widgets" styling section to Theme Options for all theme bases.
* Added theme support for `title-tag` in WP 4.1+
* Added a little design flare to alert component, to look less Bootstrap'ish.
* Added "tb_square_medium" crop size, 500x500.
* Added filter for custom logo image in sticky menu, [See Tutorial](http://dev.themeblvd.com/tutorial/adding-a-custom-logo-to-the-sticky-menu/).
* Added user website URL display for bbPress user profiles.
* Added custom height option for page banners.
* Added max-width option for Promo Box element.
* Added max-width and text-center options for Content element.
* Added support for new "Blend Up/Down" section display option in Builder, and increased default top/bottom padding for sections.
* Added icon/text insert to Divider element.
* Added `$size` param to `themeblvd_post_thumbnail` filter, helps [FILO plugin](https://wordpress.org/plugins/theme-blvd-featured-image-link-override/).
* Added option to hide gutters in post showcase.
* Added option to center header logo in Super User and Executive theme bases.
* Added option to center main menu buttons in Super User and Executive theme bases.
* Added option to insert search popup into main menu for Super User and Executive theme bases.
* Added color selection to custom font option of Entrepreneur theme base.
* Added border option for content areas of all theme bases, when using the stretch layout.